2nd commit display nav bar

--- a/nav.html
+++ b/nav.html
@@ -13,7 +13,7 @@
 <body>
 
     <nav>
-        <div class="1st">
+        <div class="first">
             <ul>
                 <li>Dashbord</li>
                 <li>Tasks</li>
@@ -24,7 +24,7 @@
                 <li>Log</li>
             </ul>
         </div>
-        <div class="2nd">
+        <div class="second">
             <ul>
                 <li>Links</li>
                 <li>Mohit Sasane</li>
